--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -9,16 +9,18 @@
     .content{
         width: 100%;
         display: flex;
-        padding: 10px 30px;
+        //padding: 10px 30px;
         font-size: 27px;
         color: white;
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
-        height: 100%;
+        //height: 100%;
+        height: 60vh;
     }
     img{
-        width: 600px;
+        //width: 600px;
+        height: 100%;
         border-radius: 0.45rem;
     }
     @media only screen and (max-width: 608px) {
@@ -42,4 +44,11 @@
             text-align: center;
         }
     }
+}
+
+.produtosContainer{
+    width: 100%;
+    display: flex;
+    height: 60vh;
+    background: #fff;
 }
